# adventure

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: config.h  err.c  err.h
